--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ env:
   ECR_REPOSITORY: sonarqube-test              # set this to your Amazon ECR repository name
   ECS_SERVICE: sonarqube-test                 # set this to your Amazon ECS service name
   ECS_CLUSTER: test-fargate                   # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: sonarqube-test         # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: .aws/task-definition.json # set this to the path to your Amazon ECS task definition
                                               # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: sonarqube-test              # set this to the name of the container in the
                                               # containerDefinitions section of your task definition
