--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,11 @@ on:
 env:
   AWS_REGION: ap-southeast-1                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: sonarqube-test              # set this to your Amazon ECR repository name
-  ECS_SERVICE: sonarqube-test                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: test-fargate                   # set this to your Amazon ECS cluster name
+  ECS_SERVICE: test-svc                       # set this to your Amazon ECS service name
+  ECS_CLUSTER: fargate-test                   # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: .aws/task-definition.json # set this to the path to your Amazon ECS task definition
                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: sonarqube-test              # set this to the name of the container in the
+  CONTAINER_NAME: test-app                    # set this to the name of the container in the
                                               # containerDefinitions section of your task definition
 
 jobs:
