--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=test-app
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.coverage.exclusions=./src/main.ts,./src/app.module.ts
+sonar.coverage.exclusions=**/*spec.ts
