--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_PORT=3000
 APP_LOGGING=all
 DB_TYPE=mysql
-DB_HOST=replicadb.cj3sjpeccshw.ap-southeast-1.rds.amazonaws.com
+DB_HOST=testdb.cj3sjpeccshw.ap-southeast-1.rds.amazonaws.com
 DB_NAME=dbuser
 DB_USERNAME=admin
 DB_PASSWORD=IlZaMKPQt20PWhoKhz5SdlU4jglVCgbu
@@ -11,3 +11,4 @@ DB_POOL_MAX=30
 DB_POOL_MIN=0
 DB_POOL_ACQUIRE=60000
 DB_POOL_IDLE=3000
+DB_SYNC=true
