update example env

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 APP_PORT=3000
 APP_LOGGING=all
 DB_TYPE=mysql
-DB_HOST=testdb.cj3sjpeccshw.ap-southeast-1.rds.amazonaws.com
-DB_NAME=dbuser
-DB_USERNAME=admin
-DB_PASSWORD=IlZaMKPQt20PWhoKhz5SdlU4jglVCgbu
+DB_HOST=localhost
+DB_NAME=test
+DB_USERNAME=root
+DB_PASSWORD=root
 DB_PORT=3306
 DB_TIMEZONE=Asia/Jakarta
 DB_POOL_MAX=30
