--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.projectKey=test-app
+sonar.projectKey=hello-world
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.coverage.exclusions=**/*.spec.ts,src/main.ts,src/fastify.ts,src/database/**,test/app.e2e-spec.ts
